[package]
name = "alexa-skills"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
iso8601 = "0.6.1"
levenshtein = "1.0.5"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
string-tools = "0.1.0"
tokio = { version = "1.37.0", default-features = false, features = ["sync", "fs"] }
